fix point modal z-index

--- a/client/src/components/PointModal/style.css
+++ b/client/src/components/PointModal/style.css
@@ -18,6 +18,7 @@
     right: 5vw;
     background-color: var(--color3);
     border: 2px solid var(--color1);
+    z-index: 9999
 }
 
 .close-point-modal-btn{
